<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/preference_category_connectivity_title" >
        <SwitchPreference
            android:title="@string/preference_switch_bluetooth_title"
            android:key="preference_switch_bluetooth"/>
        <Preference
            android:dependency="preference_switch_bluetooth"
            android:key="preference_scan"
            android:title="@string/preference_scan_title"
            android:dialogTitle="@string/preference_scan_dialog"
            android:summary="@string/preference_scan_summary"/>
        <ListPreference
            android:dependency="preference_switch_bluetooth"
            android:key="preference_list_devices"
            android:title="@string/preference_list_devices_title"
            android:dialogTitle="@string/preference_list_devices_dialog"
            android:summary="@string/preference_list_devices_summary"
            android:entries="@array/preference_list_devices_entries"
            android:entryValues="@array/preference_list_devices_values"
            android:defaultValue="@string/preference_list_devices_default" />
        <CheckBoxPreference
            android:dependency="preference_switch_bluetooth"
            android:key="preference_checkbox_connect"
            android:title="@string/preference_checkbox_connect_title"
            android:summaryOn="@string/preference_checkbox_connect_on"
            android:summaryOff="@string/preference_checkbox_connect_off"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_device_title" >
        <Preference 
            android:key="preference_test"
            android:title="@string/preference_test_title"
            android:summary="@string/preference_test_summary"/>
        <Preference 
            android:key="preference_foo"
            android:title="@string/preference_foo_title"
            android:summary="@string/preference_foo_summary"/>
    </PreferenceCategory>
</PreferenceScreen>
